src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@And([WithComponent("ecsdb::Test"), EntityId(42)]).where_clause().snap
---
source: src/query/ir.rs
description: "And([WithComponent(\"ecsdb::Test\"), EntityId(42)]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "(entity in (select entity from components where component = :1) and entity = :2)",
    placeholders: [
        (
            ":1",
            <dyn ToSql>,
        ),
        (
            ":2",
            <dyn ToSql>,
        ),
    ],
}
