src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@None.where_clause().snap
---
source: src/query/ir.rs
description: None.where_clause()
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "true",
    placeholders: [],
}
