src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@Or([Or([EntityId(42), WithComponent("ecsdb::Test")]), And([EntityId(23), WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")])]).where_clause().snap
---
source: src/query/ir.rs
description: "Or([Or([EntityId(42), WithComponent(\"ecsdb::Test\")]), And([EntityId(23), WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")])]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "((entity = :1 or entity in (select entity from components where component = :2)) or (entity = :3 and entity in (select entity from components where component = :4) and entity not in (select entity from components where component = :5)))",
    placeholders: [
        (
            ":1",
            <dyn ToSql>,
        ),
        (
            ":2",
            <dyn ToSql>,
        ),
        (
            ":3",
            <dyn ToSql>,
        ),
        (
            ":4",
            <dyn ToSql>,
        ),
        (
            ":5",
            <dyn ToSql>,
        ),
    ],
}
