src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@Or([WithComponent("ecsdb::Test"), EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).where_clause().snap
---
source: src/query/ir.rs
description: "Or([WithComponent(\"ecsdb::Test\"), EntityId(42), WithComponent(\"ecsdb::Test\"), EntityId(42)]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "(exists (select true from components c2 where c2.entity = components.entity and c2.component = :1) or entity = :2 or exists (select true from components c2 where c2.entity = components.entity and c2.component = :3) or entity = :4)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::Test",
            ),
        ),
        (
            ":2",
            Integer(
                42,
            ),
        ),
        (
            ":3",
            Text(
                "ecsdb::Test",
            ),
        ),
        (
            ":4",
            Integer(
                42,
            ),
        ),
    ],
}
